<resources>
    <string name="app_name" translatable="false">Medion</string>
    <string name="icon" translatable="false">icon</string>
    <string name="image" translatable="false">image</string>
    <string name="logo" translatable="false">logo</string>
    <string name="clinic_photo" translatable="false">clinic photo</string>
    <string name="user_is_registered">Пользователь зарегистрирован</string>
    <string name="msg_no_network">Невозможно подключиться к Интернету</string>
    <string name="msg_unknown_error">Неизвестная ошибка.</string>
    <string name="action_ok">OK</string>
    <string name="msg_cannot_connect_to_server">Наши серверы проходят техническое обслуживание и ремонт. Пожалуйста, попробуйте позже.</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="login">Логин</string>
    <string name="parol">Пароль</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="sign_up_with">Войти с помощью</string>
    <string name="sms_send">На указанный вами номер %s отправлено SMS с кодом доступа</string>
    <string name="resend_code">Отправить код повторно через %s</string>
    <string name="already_taken">Этот номер уже зарегистрирован </string>
    <string name="required_field">Это поле обязательно к заполнению</string>
    <string name="invalid_phone_number">Неправильный номер телефона</string>
    <string name="invalid_email">Неверный адрес электронной почты</string>
    <string name="confirm">Подтвердить</string>
    <string name="medical_service">Медицинские услуги</string>
    <string name="all">Все</string>
    <string name="hide_all">Скрыть все</string>
    <string name="about_our_center">О нашем центре</string>
    <string name="about_clinic">Медицинский Центр «MEDION», расположенный в самом центре города Ташкента, предлагает своим клиентам насладиться лучшими традициями гостеприимства, оценить качество наших услуг, ощутить чуткое отношение и индивидуальный подход. «MEDION» — это путь к гармонии души и тела, которую так трудно обрести в ритме большого города.</string>
    <string name="lor">ЛОР</string>
    <string name="ginecology">Гинекология</string>
    <string name="pediatr">Педиатр</string>
    <string name="neuralogy">Невролог</string>
    <string name="traumatology">Травматолог</string>
    <string name="cardiology">Кардиолог</string>
    <string name="eko">ЭКО</string>
    <string name="cardio_operation">Кардио операция</string>
    <string name="urology">Уролог</string>
    <string name="endocrinology">Эндокринолог</string>
    <string name="allergiology">Аллерголог</string>
    <string name="mammology">Маммолог</string>
    <string name="dermatology">Дерматолог</string>
    <string name="psychology">Психолог</string>
    <string name="pulmonology">Пульмонолог</string>
    <string name="psychoterapy">Физиотерапия</string>
    <string name="medicining">Процедурная</string>
    <string name="electro_encefalography">Электро энцефалография</string>
    <string name="gastroenterology">Гастроэнтерология</string>
    <string name="uzi">УЗИ</string>
    <string name="uzi_maternity">УЗИ (беременность)</string>
    <string name="mrt">МРТ</string>
    <string name="mskt">МСКТ</string>
    <string name="endoscopy">Эндоскопия</string>
    <string name="show_all">Показать все</string>
    <string name="main_doctor_of_urology">Главное врач Урология</string>
    <string name="_4_6" translatable="false">4.6</string>
    <string name="experience"><b>%s</b> года стажа</string>
    <string name="comment"><b>%s</b> отзыва</string>
    <string name="clinic_name">Медицинский центр MEDION CLINIC,AESTHETIC &amp; SPA</string>
    <string name="doc_detail">Повторная консультация уролога в течение 2-х недель</string>
    <string name="doctor_s_appointment">Назначение врача</string>
    <string name="urology_costs">Затраты на урологию</string>
    <string name="first_time">Первичная консультация уролога</string>
    <string name="second_time">Повторная консультация уролога в течение 2-х недель</string>
    <string name="third_time">Урофлоуметрия</string>
    <string name="ilyasov_Doniyor">Ильясов Дониёр Ходжиакбарович</string>
    <string name="nuridinov_hojiakbar">Ахмедов Лазиз Лутфуллаевич</string>
    <string name="years_of_experience">года стажа</string>
    <string name="date">22 august 2021</string>
    <string name="chat">Чат</string>
    <string name="about_doctor">О враче</string>
    <string name="work">Работа</string>
    <string name="reyting">Рейтинг</string>
    <string name="sertificate">Сертификаты</string>
    <string name="university_name" translatable="false">Тошкент тиббиёт академияси, Тошкент </string>
    <string name="about_consultation">Консультирует детей и взрослых с заболеваниями
        ЛОР-органов. Прежде чем поставить диагноз и
        определить план лечения, собирает подробный
        анамнез и тщательно обследует пациентов с
        использованием высокоточного безопасного
        оборудования. С помощью объективных и достоверных
        методов тестирования выявляет сурдологические и
        аудиологические проблемы у детей. Проводит
        исследования, которые помогают оценить степень
        тугоухости, предотвратить ее дальнейшее развитие.</string>
    <string name="send">Отправить</string>
    <string name="undo">Отменить</string>
    <string name="current_job">Текущие</string>
    <string name="past_job">Предылущие</string>
    <string name="main">Главная</string>
    <string name="our_doctors">Наши врачи</string>
    <string name="estethic_medicine">Эстетическая медицина</string>
    <string name="spa_medicine">CПА-комплекс</string>
    <string name="adress_contact">Адрес и контакты</string>
    <string name="adress">Адрес</string>
    <string name="my_account">Личный кабинет</string>
    <string name="change_mobile_phone_number">Изменить номер телефона</string>
    <string name="mobile_phone">Телефон</string>
    <string name="change_password">Изменить пароль</string>
    <string name="personal_information">Личные данные</string>
    <string name="my_documents">Мои документы</string>
    <string name="my_doctors">Мои врачи</string>
    <string name="languages">Языки</string>
    <string name="quit">Выход</string>
    <string name="favourites">Избранное</string>
    <string name="results">Результаты клинического анализа крови</string>
    <string name="analyzes">Анализы</string>
    <string name="reference">Справка</string>
    <string name="appointment">Назначение</string>
    <string name="recipe">Рецепт</string>
    <string name="ehc">ЕКГ</string>
    <string name="cancel">Отмена</string>
    <string name="next">Далее</string>
    <string name="last_password">Прежний пароль </string>
    <string name="new_password">Новый пароль</string>
    <string name="again">Павторы пароль</string>
    <string name="save">Сохранить</string>
    <string name="choose_language">Выберите язык</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="uzbek" translatable="false">O‘zbek(Lotin)</string>
    <string name="english" translatable="false">English</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="fill_phone_numeber" translatable="false">998 12 345 67 89</string>
    <string name="blood_group">Группа крови</string>
    <string name="dob">Дата рождения</string>
    <string name="submit">Записаться</string>
    <string name="enter_phone">Введите ваш номер телефона для входа</string>
    <string name="phone_number">Номер телефона </string>
    <string name="male">Мужской</string>
    <string name="female">Женский </string>
    <string name="weight">Вес, кг </string>
    <string name="height">Рост, см</string>
    <string name="_21_12_1970" translatable="false">21.12.1970</string>
    <string name="address_contacts_1">    MEDION - уникальный инновационный медицинский центр,
        основанный в 2016 году. Мы предлагаем весь спектр медицинских услуг и технологий,
        позволяющих получить желаемое комплексное решение вопросов здоровья и красоты. В этой
        презентации мы расскажем вам подробно о всех направлениях нашего бизнеса!
    </string>
    <string name="address_contacts_2">Шайхантахурский район, ул. Абдулла Кодирий 39</string>
    <string name="address_contacts_3">Узнайте больше о наших клиниках</string>
    <string name="in_maps">На карте</string>
    <string name="estetic_medicine_1">Мы бы хотели пригласить Вас к нам в гости. Показать, как выглядит наш центр. Прислушаться к внутреннему голосу и принять разумное решение.</string>
    <string name="estetic_medicine_2">Услуги эстетической</string>
    <string name="estetic_medicine_3" translatable="false">Глаза выдают реальный возраст, поэтому хирургическая коррекция дает возможность значительно улучшить свой внешний вид. В основном данная процедура востребована у пациентов средних лет. Первыми признаками возрастных изменений являются морщины и мешки под глазами, из-за которых человек выглядит старше. Иногда эта процедура требуется и в более молодом возрасте, если есть анатомическая предрасположенность к формированию провисаний и грыж.</string>
    <string name="estetic_medicine_4">ПРИМЕРЫ НАШИХ РАБОТ:</string>
    <string name="before_surgery">До процедуры</string>
    <string name="estetic_medicine_5" translatable="false">Блефаропластика</string>
    <string name="estetic_medicine_6" translatable="false">Маммопластика</string>
    <string name="estetic_medicine_7" translatable="false">Пластика живота</string>
    <string name="spa_tv_1">Клиника MEDION предлагает Вам широкий выбор SPA-услуг, оказывающих благотворный физиотерапевтический и релаксирующий эффект на организм.</string>
    <string name="spa_tv_2">Мы предоставляем процедуры:</string>
    <string name="short_discription">Краткое описание</string>
    <string name="massage">Массаж</string>
    <string name="water_procedures">Водные процедуры</string>
    <string name="medicine_in_bath">Процедуры в хаммаме</string>
    <string name="preventive_service">Профилактические услуги/SPA</string>
    <string name="lipolytics" translatable="false">Липолитики</string>
    <string name="mesotherapy" translatable="false">Мезотерапия</string>
    <string name="plasmolifting" translatable="false">Плазмалифтинг</string>
    <string name="botulinum_toxins" translatable="false">Ботулотоксины</string>
    <string name="biorevitalization" translatable="false">Биоревитализация и биорепарация</string>
    <string name="contour_plastic" translatable="false">Контурная пластика</string>
    <string name="healing_procedures">Лечебные процедуры</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone">Телефон</string>
    <string name="t_8_30" translatable="false">08:30</string>
    <string name="t_9_00" translatable="false">09:00</string>
    <string name="t_9_30" translatable="false">09:30</string>
    <string name="t_10_00" translatable="false">10:00</string>
    <string name="t_10_30" translatable="false">10:30</string>
    <string name="t_11_00" translatable="false">11:00</string>
    <string name="t_11_30" translatable="false">11:30</string>
    <string name="t_12_00" translatable="false">12:00</string>
    <string name="t_14_00" translatable="false">14:00</string>
    <string name="t_14_30" translatable="false">14:30</string>
    <string name="t_15_00" translatable="false">15:00</string>
    <string name="t_15_30" translatable="false">15:30</string>
    <string name="t_16_00" translatable="false">16:00</string>
    <string name="t_16_30" translatable="false">16:30</string>
    <string name="t_17_00" translatable="false">17:00</string>
    <string name="t_17_30" translatable="false">17:30</string>
    <string name="phone_number_mobil" translatable="false">+998906274859</string>
    <string name="todo" translatable="false">TODO</string>
</resources>