<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_calendar_view">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_tire"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="56dp"
            android:textColor="@color/tangaroa_900"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_appointment">

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_8_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_8_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_9_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_9_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_9_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_9_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_10_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_10_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_1">

                <TextView
                    android:id="@+id/tv_10_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_10_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_11_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_11_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_11_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_11_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_12_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_12_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_2">

                <TextView
                    android:id="@+id/tv_12_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_14_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_14_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_14_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_15_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_15_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_15_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_15_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_3">

                <TextView
                    android:id="@+id/tv_16_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_16_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_16_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_16_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_17_00"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_17_00"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_17_30"
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_edittext3"
                    android:gravity="center"
                    android:text="@string/t_17_30"
                    android:textColor="@color/tangaroa_900"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_submit_top"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>