<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/iv_dot"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_dot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/tv_clinic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/clinic_name"
            android:textColor="@color/tangaroa_900"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/iv_dot"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_sphere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/main_doctor_of_urology"
            android:textColor="@color/steel_grey_800"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/iv_dot"
            app:layout_constraintTop_toBottomOf="@id/tv_clinic_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>